tests/paczka1/small_fuzzy/18838814.err
Error in line 1: lcmP9X S890 36,8
Error in line 4: lcmP9X S44 79,6
